--- a/src/sections/microbundle/parts/definition.tex
+++ b/src/sections/microbundle/parts/definition.tex
@@ -2,7 +2,7 @@
 \begin{mystatement}{definition}[microbundle]{microbundle::definition}[20]
     A \defterm{microbundle} $\bb$ over $B$ (with \defterm{fiber dimension} $n$)
     is a diagram $\bundle{B}{E}{i}{j}$ satisfying the following:
-    \begin{enumerate}[(i)]
+    \begin{properties}
         \item $B$ is a topological space (\defterm{base space})
         \item $E$ is a topological space (\defterm{total space})
         \item $i: B \to E$ (\defterm{injection}) and $j: E \to B$ (\defterm{projection})
@@ -18,7 +18,7 @@
             \end{tikzcd}
         \]
         Note that $\pi_1$ denotes the projection $(u, x) \mapsto x$.
-    \end{enumerate}
+    \end{properties}
 \end{mystatement}
 
 % remark
