--- a/src/sections/normal/section.tex
+++ b/src/sections/normal/section.tex
@@ -1,8 +1,8 @@
-\subsection{The Normal Microbundle}\label{section::normal}
+\subsection*{The Normal Microbundle}\label{section::normal}{\blankbreak}
 \input{src/sections/normal/parts/definition}
 \input{src/sections/normal/parts/composition}
 \input{src/sections/normal/parts/uniqueness}
-\subsection{Milnors Theorem}\label{section::milnor}
+\subsection*{Milnors Theorem}\label{section::milnor}{\blankbreak}
 \input{src/sections/normal/parts/transitivity}
 \input{src/sections/normal/parts/retract}
 \input{src/sections/normal/parts/homeomorphy}
