--- a/src/sections/suspension/parts/whitney.tex
+++ b/src/sections/suspension/parts/whitney.tex
@@ -1,41 +1,37 @@
 % definition
 \begin{mystatement}{definition}{suspension::whitney}
-    The \defterm{Whitney sum} of two rooted microbundles $\bb$ and $\bb'$ over $B$
-    is the initial Whitney sum $\whitney{\bb}{\bb'}$ together with the rooting
+    Given two two rooted microbundles $\bb$ and $\bb'$ over $B$,
+    we equip the Whitney sum $\whitney{\bb}{\bb'}$ with the rooting
     \[ \germdef{\whitney{R}{R'}}{(\whitney{\bb}{\bb'})\restr{b_0}}{\whitney{\be[n_1]{b_0}}{\be[n_2]{b_0}} = \be[n_1 + n_1]{b_0}}. \]
+    represented by the direct sum of two representatives for $R$ and $R'$.
 \end{mystatement}
 
 % lemma
-\begin{mystatement}{lemma}{suspension::compatability}   
-    The following non-rooted isomorphy holds
-    for rooted microbundles $\ba$ and $\ba'$ over $A$
-    and $\bb$ and $\bb'$ over $B$: 
-    \[
-        \whitney{(\ba \vee \bb)}{(\ba' \vee \bb')}
-        \cong (\whitney{\ba}{\ba'}) \vee (\whitney{\bb}{\bb'})
-    \]
+\begin{mystatement}{lemma}{suspension::compatability}
+    Let $\ba$ and $\ba'$ be two rooted microbundles over $A$,
+    and let $\bb$ and $\bb'$ be two rooted microbundle over $B$.
+    Then the following (non-rooted) isomorphy holds:
+    \[ \whitney{(\ba \vee \bb)}{(\ba' \vee \bb')} \cong (\whitney{\ba}{\ba'}) \vee (\whitney{\bb}{\bb'}) \]
 \end{mystatement}
-\begin{myproof}
-    Consider the equation
-    \[ E(\whitney{(\ba \vee \bb)}{(\ba' \vee \bb')}) \]
-    \[ = \set{(e, e') \in E(\ba \vee \bb) \cross E(\ba' \vee \bb')}{j(e) = j'(e')} \]
-    \[ = \set{(e, e') \in ((E(\ba) \sqcup E(\bb)) / \sim) \cross ((E(\ba') \sqcup E(\bb')) / \sim')}{j(e) = j'(e')} \]
-    \[ = (\set{(e, e') \in E(\ba) \cross E(\ba')}{j_a(e) = j_{a'}(e')} \sqcup \]
-    \[ \set{(e, e') \in E(\bb) \cross E(\bb')}{j_b(e) = j_{b'}(e')}) / \backsim \]
-    \[ = (E(\whitney{\ba}{\ba'}) \sqcup E(\whitney{\bb}{\bb'})) / \backsim \]
-    \[ = E((\whitney{\ba}{\ba'}) \vee (\whitney{\bb}{\bb'})) \]
-    where $(e_a, e_a') \backsim (e_b, e_b') \iff e_a \sim e_b \land e_a' \sim' e_b'$.
-    Here, the equivalence relations $\sim$ and $\sim'$ denote the ones
-    used in the construction of the corresponding wedge sums.
 
-    Additionally, the injection
-    \[ i_\oplus(a) = (i_a(a), i_a'(a)) = i_\vee(a) \text{ (symmetrical for $b$)}\]
-    and projection maps
-    \[ j_\oplus(e, e') = j(e) =  j_\vee(e) \]
-    are equal.
-    Here, $i_\oplus$ and $j_\oplus$ denote the injection and projection maps for
-    \[ \whitney{(\ba \vee \bb)}{(\ba' \vee \bb')} \]
-    and $i_\vee$ and $j_\vee$ denote the injection and projection maps for
-    \[ (\whitney{\ba}{\ba'}) \vee (\whitney{\bb}{\bb'}). \]
+% proof
+\begin{myproof}
+    % homeomorphy
+    Consider $\psi: E(\whitney{(\ba \vee \bb)}{(\ba' \vee \bb')}) \isomto E((\whitney{\ba}{\ba'}) \vee (\whitney{\bb}{\bb'}))$
+    given by the identity map.
+    Note that $\psi$ is well-defined, because
+    \[ (e, e') \in E(\whitney{(\ba \vee \bb)}{(\ba' \vee \bb')}) \]
+    \[ \implies j(e) = j'(e') \implies j(e), j'(e') \in A \tor j(e), j'(e') \in B\]
+    \[ \implies (e, e') \in E(\whitney{\ba}{\ba'}) \tor (e, e') \in E(\whitney{\bb}{\bb'}) \]
+    \[ \implies (e, e') \in E((\whitney{\ba}{\ba'}) \vee (\whitney{\bb}{\bb'})). \]
+
+    % injection and projection
+    Furthermore, the injection and projection maps agree.
+    To check this, consider the following equations (symmetrical for $B$):
+    \begin{gather}
+        i_\oplus(a) = (i_a(a), i_a'(a)) = i_\vee(a) \\
+        j_\oplus(e_a, e_a') = j(e_a) = j_a(e_a) =  j_\vee(e_a, e_a')
+    \end{gather}
+
     It follows that the two microbundles are isomorphic.
 \end{myproof}
