--- a/src/sections/suspension/section.tex
+++ b/src/sections/suspension/section.tex
@@ -10,13 +10,16 @@
     we assume that every topological space is equipped with an arbitrary base point
     which we will denote with subscript $0$.
 \end{myparagraph}
-\subsection{Rooted Microbundles}\label{section::rooted}
+\subsection*{Rooted Microbundles}\label{section::rooted}{\blankbreak}
 \input{src/sections/suspension/parts/rooted}
 \input{src/sections/suspension/parts/induced}
 \input{src/sections/suspension/parts/homotopy}
 \input{src/sections/suspension/parts/wedge}
-\subsection{Microbundles over a Suspension}\label{section::suspension}
+\subsection*{Microbundles over a Suspension}\label{section::suspension}{\blankbreak}
 \input{src/sections/suspension/parts/suspension}
+\input{src/sections/suspension/parts/triviality}
+\input{src/sections/suspension/parts/distributivity}
+\input{src/sections/suspension/parts/reflection}
 \input{src/sections/suspension/parts/whitney}
 \input{src/sections/suspension/parts/paracompact}
 \input{src/sections/suspension/parts/commutativity}
