--- a/thesis.tex
+++ b/thesis.tex
@@ -18,10 +18,10 @@
 % Document :: Introduction
 \section{Introduction}\label{chapter::introduction}
 % Document :: Introduction :: Motivation
-\subsection{Motivation}\label{section::motivation}
+\subsection*{Motivation}\label{section::motivation}
 \input{src/introduction}
 % Document :: Introduction :: Microbundle
-\subsection{Introduction to Microbundles}\label{section::microbundle}
+\subsection*{Introduction to Microbundles}\label{section::microbundle}
 \input{src/sections/microbundle/section}
 % Docuement :: Constructions
 \section{Standard Constructions}\label{chapter::constructions}
@@ -32,10 +32,10 @@
     and many results carry over immediatly its microbundle analogue.
 \end{myparagraph}
 % Document :: Constructions :: Induced
-\subsection{Induced Microbundles}\label{section::induced}
+\subsection*{Induced Microbundles}\label{section::induced}
 \input{src/sections/induced/section}
 % Document :: Constructions :: Whitney
-\subsection{The Whitney Sum}\label{section::whitney}
+\subsection*{The Whitney Sum}\label{section::whitney}
 \input{src/sections/whitney/section}
 % Document :: Homotopy
 \section{The Homotopy Theorem}\label{chapter::homotopy}
