--- a/src/sections/suspension/parts/suspension.tex
+++ b/src/sections/suspension/parts/suspension.tex
@@ -2,115 +2,15 @@
 \begin{myparagraph}
     In the following, let $B$ be a \defterm{reduced suspension}
     \[ SX = (\cyl{X}) / (X \cross \coll{0, 1} \cup \cyl{x_0})\]
-    over $X$.
+    over a topological space $X$.
 
     Let $\phi: B \to B \vee B$ denote the map that sends
     $X \cross [0, \half]$ to the first $B$ via
-    \[ \phi([x, t]) = [x, 2t] \]
-    and $X \cross [\half, 1]$ to the second $B$ via
-    \[ \phi([x, t]) = [x, 2t - 1]. \]
+    \[ \phi([x, t]) = \case{[x, 2t]}{[x, 2t - 1]}{t \le \half}. \]
 
     Additionally, let $c_1: B \vee B \to B$ denote the map
     that is the identity on the first summand
-    and the constant map $const_{b_0}$ on the second summand (symmetrically define $c_2$).
+    and the constant map $c_{B, b_0}$ on the second summand, i.e.
+    \[ c_1(b, i) = \case{b}{b_0}{i = 1}. \]
+    We define $c_2$ analogously.
 \end{myparagraph}
-
-% lemma triviality
-\begin{mystatement}{lemma}{suspension::triviality}
-    The following non-rooted isomorphy holds:
-    \[ \ind{\phi}(\bb \vee \be{B}) \cong \bb \cong \ind{\phi}(\be{B} \vee \bb) \]
-\end{mystatement}
-\begin{myproof}
-    We prove the lemma in two steps.
-    \begin{itemize}
-        \item $\ind{c_1}\bb \cong \bb \vee \be{B}$:
-        
-        First, consider the total space
-        \[ E(\ind{c_1}\bb) = \set{(b, e) \in (B \vee B) \cross E(\bb)}{c_1(b) = j(e)} \]
-        \[ = (\set{(b, e) \in B \cross E(\bb)}{b = j(e)} \sqcup B \cross E(\bb[b_0])) / \sim \]
-        \[ = (\set{(j(e), e)}{e \in E(\bb)} \sqcup B \cross E(\bb[b_0])) / \sim \]
-        where $(b, e) \sim (b', e') \iff b = b_0 = b' \land e = e'$.
-        We can omit the first component on the left side resulting in
-        \[ E(\ind{c_1}\bb) = (E(\bb) \sqcup (B \cross E(\bb[b_0]))) / \sim \]
-        where $e \sim (b, e') \iff b = b_0 \land e = e'$.
-        
-        On the other side, consider
-        \[ E(\bb \vee \be{B}) = (E(\bb) \sqcup (B \cross \R^n)) / e \sim' f(e) \]
-        with $f$ being some representative
-        $U_f \to b_0 \cross \R^n$ for $\inv{id_{\cyl{b_0}}} \circ R_b$.
-        
-        Now, we have a map $\psi$ from the open subset of $E(\ind{c_1}\bb)$
-        \[ (E(\bb) \sqcup (B \cross U_f)) / \sim \]
-        to the open subset of $E(\bb \vee \be{B})$
-        \[ (E(\bb) \sqcup (B \cross f(U_f))) / \sim' \]
-        with $\psi([e]) = [e]$ and $\psi([b, e]) = [(b, \snd{f}(e))]$.
-        The map is well-defined because for every $e \sim (b_0, e)$
-        \[ \psi([e]) = [e] = [f(e)] = [b_0, \snd{f}(e)] = \psi([b_0, e]). \]
-        Homeomorphy of $\psi$ follows by the homeomorphy of its summands.
-        
-        The map commutes with the injection map in the first summand
-        \[ \psi(i_{c_1}([b_1])) = \psi(b_1, i(c_1([b_1]))) = \psi(b_1, i(b_1)) \]
-        \[ = [b_1, \snd{f}(i(b_1))] = [f(i(b_1))] = [i(b_1)] \]
-        and the second summand
-        \[ \psi(i_{c_1}([b_2])) = \psi(b_2, i(c_1([b_2]))) = \psi(b_2, i(b_0)) \]
-        \[ = [b_2, \snd{f}(b_0)] = [b_2, 0] = [i_{\be{B}}(b_2)] \]
-        as well as with the projection map in the first summand
-        \[ j_{c_1}([e]) = [j(e)] = j(\psi([e])) \]
-        and the second summand
-        \[ j_{c_1}([b, e]) = [b] = [\pi_1(b, \snd{\psi}([b, e]))] = [\pi_1(\psi(b, e))]. \]
-        Therefore, $\psi$ represents an isomorphism-germ between $\ind{c_1}\bb$ and $\bb \vee \be{B}$.
-    
-        \item From $c_1 \circ \phi = id_B$ we can conclude that
-        \[ \ind{\phi}(\bb \vee \be{B}) \cong \ind{\phi}\ind{c_1}\bb \cong \ind{(c_1 \circ \phi)}\bb \cong \bb. \]
-        The isomorphy $\bb \cong \ind{\phi}(\be{B} \vee \bb)$ follows by symmetry,
-        which concludes the proof.
-    \end{itemize}
-\end{myproof}
-
-% lemma distributivity
-\begin{mystatement}{lemma}{suspension::distributivity}
-    Let $\ba$ and $\bb$ be rooted microbundles over $A$ and $B$.
-    For maps $f: A' \to A$ and $g: B' \to B$ the following non-rooted isomorphy holds:
-    \[ \ind{(f \vee g)}(\ba \vee \bb) \cong \ind{f}\ba \vee \ind{g}\bb \]
-\end{mystatement}
-
-% proof distributivity
-\begin{myproof}
-    Consider the equation
-    \[ E(\ind{(f \vee g)}(\ba \vee \bb)) \]
-    \[ = \set{(x, e) \in (A' \vee B') \cross E(\ba \vee \bb)}{(f \vee g)(x) = j(e)} \]
-    \[ = \set{(x, e) \in ((A' \cross E(\ba)) \sqcup (B' \cross E(\bb))) / \sim}{(f \vee g)(x) = j(e)} \]
-    \[ = (\set{(x, e) \in A' \cross E(\ba)}{f(x) = j_a(e)} \sqcup \set{(x, e) \in B' \cross E(\bb)}{g(x) = j_b(e)}) / \sim \]
-    \[ = (E(\ind{f}\ba) \sqcup E(\ind{g}\bb)) / \sim \]
-    \[ = E(\ind{f}\ba \vee \ind{g}\bb) \]
-    where $(a, e_a) \sim (b, e_b) \iff a = a_0 = b_0 = b \land e_a = e_b$ in $E(\ba \vee \bb)$.
-
-    Additionally, the injection
-    \[ i_{f \vee g}(a) = i_f(a) = i_{\vee}(a) \]
-    and projection maps
-    \[ j_{f \vee g}(a, e) = a = j_f(a, e) = i_{\vee}(a, e) \]
-    are equal.
-    Here, $i_\vee$ and $j_\vee$ denote the
-    injection and projection maps for $\ind{f}\ba \vee \ind{g}\bb$.
-    It follows that the two microbundles are isomorphic.
-\end{myproof}
-
-% foreword reflection
-\begin{myparagraph}
-    Let $r: B \isomto B$ denote the homeomorphism that corresponds to the `reflection'
-    \[ (x, t) \mapsto (x, 1 - t)\]
-    and let $c: B \vee B \to B$ be the identity on the first summand and $r$ on the second summand.
-\end{myparagraph}
-
-% lemma reflection
-\begin{mystatement}{lemma}{suspension::reflection}
-    The induced microbundle $\ind{\phi}(\bb \vee \ind{r}\bb)$ is trivial.
-\end{mystatement}
-\begin{myproof}
-    The composition $f \circ \phi$ is null-homotopic via the homotopy $H: B \cross \I \to B$ with
-    \[ H([x, t], s) = f(\phi(x, t * s)). \]
-    Therefore $\ind{\phi}\ind{f}\bb \cong \ind{(f \circ \phi)}\bb\cong \ind{const_{b_0}}\bb \cong \be{B}$ (see \myintref{homotopy::theorem}).
-    
-    Applying the previous lemma, it follows that $\ind{\phi}(\bb \vee \ind{c}\bb) = \ind{\phi}\ind{f}\bb$ and hence
-    \[ \ind{\phi}(\bb \vee \ind{c}\bb) \cong \be{B}. \]
-\end{myproof}
