worked on suspension chapter

--- a/src/sections/suspension/parts/homotopy.tex
+++ b/src/sections/suspension/parts/homotopy.tex
@@ -89,7 +89,8 @@
 \begin{myproof}[of the Rooted Homotopy Theorem]
     We need to show that $\ind{f}\bb$ and $\ind{g}\bb$ are rooted isomorphic,
     that is there exists an isomorphism-germ $\germ{\ind{f}\bb}{\ind{g}\bb}$
-    extending $\inv{R_g} \circ R_f = id_\ba$.
+    extending $\inv{R_g} \circ R_f = I$
+    where $I$ denotes the identity germ.
 
     For the initial Homotopy Theorem,
     we constructed a bundle-germ
