--- a/src/sections/suspension/parts/wedge.tex
+++ b/src/sections/suspension/parts/wedge.tex
@@ -134,7 +134,7 @@
         it follows that the identity $\germ{(\ba \vee \bb)}{(\ba \vee \bb)'}$
         is an isomorphism-germ.
         Together with
-        \[ \inv{R'} \circ R = \inv{R} \circ R = id_\ba, \]
-        this completes the proof.
+        \[ \inv{R'} \circ R = \inv{R} \circ R = I, \]
+        which completes the proof.
     \end{sectionize}
 \end{myproof}
