--- a/src/sections/normal/section.tex
+++ b/src/sections/normal/section.tex
@@ -1,8 +1,8 @@
-\subsection*{The Normal Microbundle}\label{section::normal}{\blankbreak}
+\subsection*{The Normal Microbundle}\label{section::normal}
 \input{src/sections/normal/parts/definition}
 \input{src/sections/normal/parts/composition}
 \input{src/sections/normal/parts/uniqueness}
-\subsection*{Milnors Theorem}\label{section::milnor}{\blankbreak}
+\subsection*{Milnors Theorem}\label{section::milnor}
 \input{src/sections/normal/parts/transitivity}
 \input{src/sections/normal/parts/retract}
 \input{src/sections/normal/parts/homeomorphy}
