--- a/src/packages.tex
+++ b/src/packages.tex
@@ -70,4 +70,10 @@
 \usepackage{etoolbox}
 \AtBeginEnvironment{equation}{\setcounter{equation}{0}} 
 \AtBeginEnvironment{align}{\setcounter{equation}{0}} 
-\AtBeginEnvironment{gather}{\setcounter{equation}{0}} 
+\AtBeginEnvironment{gather}{\setcounter{equation}{0}}
+
+\makeatletter
+\renewcommand\subsection{\@startsection{subsection}{2}%
+  \z@{.5\linespacing\@plus.7\linespacing}{-.5em}%
+  {\normalfont\scshape}}
+\makeatother
