--- a/src/sections/suspension/parts/triviality.tex
+++ b/src/sections/suspension/parts/triviality.tex
@@ -28,7 +28,7 @@
 
         % commutativity
         Finally, it remains to be shown that $\psi$
-        commutes with the injection and projection maps from $\ind{c_1}\bb$ and $\bb \vee \be{B}$.
+        commutes with the injection and projection maps of $\ind{c_1}\bb$ and $\bb \vee \be{B}$.
         To check this, consider the following equations:
         \begin{align}
             &\psi(i_{c_1}(b, i)) = \casenif{\psi((b, 1), i(b)) = i(b) = i_\vee(b, 1)}{\psi((b, 2), i(b_0)) = f(i(b)) = (b, 0) = (id \cross 0)(b) = i_\vee(b, 2)} \\
