worked on normal section

--- a/refs.bib
+++ b/refs.bib
@@ -88,3 +88,24 @@
   year      = {1966},
   publisher = {JSTOR}
 }
+@article{hanner,
+  title={Some theorems on absolute neighborhood retracts},
+  author={Hanner, Olof},
+  journal={Arkiv f{\"o}r Matematik},
+  volume={1},
+  number={5},
+  pages={389--408},
+  year={1951},
+  publisher={Springer}
+}
+@inbook{dimension,
+ ISBN = {9780691627748},
+ URL = {http://www.jstor.org/stable/j.ctt183pk8v.8},
+ author = {WITOLD HUREWICZ and HENRY WALLMAN},
+ booktitle = {Dimension Theory (PMS-4)},
+ pages = {52--73},
+ publisher = {Princeton University Press},
+ title = {Covering and Imbedding Theorems},
+ urldate = {2024-06-12},
+ year = {1941}
+}
