--- a/src/sections/normal/section.tex
+++ b/src/sections/normal/section.tex
@@ -1,11 +1,18 @@
-\subsection*{The Normal Microbundle}\label{section::normal}
+\subsection*{The Normal Microbundle}\label{section::normal}{\blankbreak}
+\begin{myparagraph}
+    Throughout this section,
+    we will utilize the fact that for every submanifold $N \sub M$,
+    $N$ is an absolute neighborhood retract (ANR) in $M$,
+    i.e. there exists an open neighborhood $V \sub M$ of $N$
+    together with a retraction $r: V \to N$.
+    For a proof, see Theorem 3.3 in \cite{hanner}.
+    % TODO: why is a manifold locally ANR?
+\end{myparagraph}
 \input{src/sections/normal/parts/definition}
 \input{src/sections/normal/parts/composition}
 \input{src/sections/normal/parts/uniqueness}
 \subsection*{Milnors Theorem}\label{section::milnor}
 \input{src/sections/normal/parts/transitivity}
-\input{src/sections/normal/parts/retract}
-\input{src/sections/normal/parts/homeomorphy}
+% \input{src/sections/normal/parts/homeomorphy}
 \input{src/sections/normal/parts/totalspace}
 \input{src/sections/normal/parts/milnor}
-% TODO: outlook, example that tubular space is necessary
