--- a/src/sections/normal/parts/totalspace.tex
+++ b/src/sections/normal/parts/totalspace.tex
@@ -1,26 +1,43 @@
 % foreword
 \begin{myparagraph}
-    The total space $E(\ind{r}\bt_N)$ is a topological manifold with
-    \[ E(\ind{r}\bt_N) \cong M \cross N \]
-    as described in the previous lemma.
+    The total space $E(\ind{r}\bt_N)$ is a topological manifold.
+    This can be seen with
+    \[ E(\ind{r}\bt_N) \cong V \cross N. \]
 
-    The fact that the above diagram commutes,
-    allows us to consider $N$ to be a submanifold of $E(\ind{r}\bt_N)$ via
-    \[ N \incl M \xto{i_r} E(\ind{r}\bt_N). \]
-    The composition $\iota \circ i_r$ is an embedding since $i_r$ is an embedding
-    due to the construction of the induced microbundle.
+    Together with $N \incl M \xto{i_r} E(\ind{r}\bt_N)$, we can assume that
+    $N$ is an embedded submanifold of $E(\ind{r}\bt_N)$.
+    Note that $i_r$ is an embedding due to the construction of the induced microbundle.
 \end{myparagraph}
 
 % lemma
 \begin{mystatement}{lemma}{normal::total}
-    Let $M$ be a topological manifold together with a submanifold $N \sub M$.
-    Then there exists a normal microbundle $\bn$ of $N$ in $E(\ind{r}\bt_N)$ such that $\bn \cong \ind{\iota}\bt_M$.
+    Let $N \sub M$ be an embedded submanifold and let $r: V \to N$ be a retraction.
+    Then there exists a normal microbundle $\bn$ of $N$ in $E(\ind{r}\bt_N)$ such that $\bn \cong \ind{\iota}\bt_V$.
 \end{mystatement}
 
 % proof
 \begin{myproof}
-    We are already given a normal microbundle of $N$ in $E(\ind{r}\bt_N)$ with $\ind{r}\bt_N\restr{N}$.
-    Isomorphy between $\ind{r}\bt_N\restr{N}$ and $\ind{\iota}\bt_M$ follows from the homeomorphy
-    \[ \psi: E(\ind{\iota}\bt_M) \isomto E(\ind{r}\bt_N) \]
-    and from the diagram which shows that injection and projection maps commute with $\psi$.
+    We are given a normal microbundle of $N$ in $E(\ind{r}\bt_N)$ by $\ind{r}\bt_N\restr{N}$.
+    
+    Since $\ind{r}\bt_N\restr{N} \cong \ind{(r \circ \iota)}\bt_N = \ind{id}\bt_N \cong \bt_N$,
+    it suffices to show that $\bt_N \cong \ind{\iota}\bt_V$.
+    % homoemorphism
+    We define a homeomorphism $\psi: E(\bt_N) \isomto E(\ind{\iota}\bt_V)$ with
+    \[ \psi(n_1, n_2) = (n_1, n_1, n_2) \tand \inv{\psi}(n, v_1, v_2) = (n, v_2) \]
+    for which homeomorphy follows from component-wise
+    continuity of both $\psi$ and $\inv{\psi}$.
+    
+    % commutativity
+    Commutativity between the injection maps is given by
+    \[ \psi(\Delta(n)) = \psi(n, n) = (n, n, n) = (n, \Delta(n)) = i_\iota(n) \]
+    and between the projection maps by
+    \[ \pi_1(n_1, n_2) = n_1 = j_\iota(n_1, n_1, n_2) = j_\iota(\psi(n_1, n_2)), \]
+    which concludes the proof.
+    1
+    
+    Furthermore, $\ind{r}\bt_N\restr{N}$ is isomorphic to $\ind{\iota}\bt_V$ is given by
+    \[ \psi: E(\ind{\iota}\bt_V) \isomto E(\ind{r}\bt_N). \]
+    where commutativity with the injection and projection maps
+    follow from the diagram in \myintref{normal::commute} and from the following equation:
+    \[ j_\iota(n, v_1, v_2) = n = j_r(v_2) \]
 \end{myproof}
